<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="kv.kvchat.ui.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context=".ui.auth.LoginActivity">

        <TextView
            android:id="@+id/tv_login_title"
            style="@style/WhiteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_title"
            app:layout_constraintBottom_toTopOf="@id/cl_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/et_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/email_title" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_email_green_24dp"
                android:drawableStart="@drawable/ic_email_green_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_title"
                android:text="@={viewmodel.email}" />

            <TextView
                android:id="@+id/tv_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/et_email"
                android:paddingTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/password_title" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableLeft="@drawable/ic_lock_green_24dp"
                android:drawableStart="@drawable/ic_lock_green_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/hint_password"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_title"
                android:text="@={viewmodel.email}" />

            <TextView
                android:id="@+id/tv_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                android:paddingTop="5dp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:onClick="@{() -> viewmodel.login()}"
                android:text="@string/btn_login"
                style="@style/OrangeButton"
                app:layout_constraintTop_toBottomOf="@id/tv_forget_password"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
                android:text="@string/register"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>