<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="kv.kvchat.ui.auth.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:context=".ui.auth.ResetPasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_resetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                style="@style/BlackTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/title_resetpassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/et_email"
                android:text="@string/email_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_email_green_24dp"
                android:drawableLeft="@drawable/ic_email_green_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={viewmodel.email}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

            <Button
                android:id="@+id/btn_reset"
                style="@style/OrangeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:onClick="@{() -> viewmodel.resetPassword()}"
                android:text="@string/btn_reset"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:id="@+id/tv_resetinfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/info_resetpassword"
                app:layout_constraintLeft_toLeftOf="@id/btn_reset"
                app:layout_constraintRight_toRightOf="@id/btn_reset"
                app:layout_constraintTop_toBottomOf="@id/btn_reset" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>